--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,12 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
+.idea/**/gradle.xml
+.idea/**/libraries
