--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ kotlin-serialization-json = "1.5.0"
 room = "2.5.1"
 exoplayer = "1.0.2"
 icon = "1.4.3"
+scrollbar = "1.6.3"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -43,7 +44,8 @@ room = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "exoplayer" }
 exoplayer-ui = { group = "androidx.media3", name = "media3-ui", version.ref = "exoplayer" }
-icon = {group = "androidx.compose.material", name = "material-icons-extended", version.ref = "icon"}
+icon = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "icon" }
+scrollbar = { group = "com.github.nanihadesuka", name = "LazyColumnScrollbar", version.ref = "scrollbar" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
